<resources>
    <string name="app_name">BrokFree</string>
    <string name="tag_line">Remove Broker Forever</string>
    <string name="detail">detail</string>
    <string name="full_names">full names</string>
    <string name="contact_number">Mobile Number</string>


    <!-- fragment create post page-->
    <string name="Location">Location</string>
    <string name="Address">Address</string>
    <string name="SellerMobileNumber">Seller mobile number</string>
    <string name="PropertyPattern">shop</string>
    <string name="TypeOfProperty">TypeOfProperty</string>
    <string name="LearnMore">Learn More</string>
    <string name="SellerInfo">Seller Info</string> <!--for btn-->

    <!-- post favourite page-->
    <string name="LocationFavourite">Location</string>
    <string name="AddressFavourite">Address</string>
    <string name="SellerMobileNumberFavourite">Seller mobile number</string>
    <string name="PropertyPatternFavourite">shop</string>
    <string name="TypeOfPropertyFavourite">TypeOfProperty</string>
    <string name="LearnMoreFavourite">Learn More</string>
    <string name="SellerInfoFavourite">Seller Info</string>

    <!--profile fagment-->

    <string name="Profile_title">Profile</string>
    <string name="contact">contact</string>

    <string name="Create">Create</string>
    <string name="Edit_Detail">Edit Detail</string>

    <string name="Favourite">Favourite</string>
    <string name="Profile">Profile</string>


    <!-- Seller_info -->
    <string name="Seller_information">Profile</string> <!--for hadfing of seller information activity-->
    <string name="another_uploed_details">Another Property</string>
    <string name="Location_Seller_info">Location</string>
    <string name="Address_Seller_info">Address</string>
    <string name="SellerMobileNumber_Seller_info">Seller mobile number</string>
    <string name="PropertyPattern_Seller_info">shop</string>
    <string name="TypeOfProperty_Seller_info">TypeOfProperty</string>
    <string name="LearnMore_Seller_info">Learn More</string>

    <string name="Title_Seller_Information">Seller_information</string>

    <!-- login data-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>