<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_margin="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
           >
            <!-- the top side -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Seller_mobile_number_Seller_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/SellerMobileNumber_Seller_info"
                    android:textSize="25dp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/Property_Pattern_Seller_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/PropertyPattern_Seller_info"
                    android:textSize="25dp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/Location_Seller_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Location_Seller_info"
                    android:textSize="25dp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/Type_of_property_Seller_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="start"
                    android:text="@string/TypeOfProperty_Seller_info"
                    android:textSize="25dp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

            <!-- the top side end -->
            <!-- the middle side start -->
            <TextView
                android:id="@+id/Address_Seller_info"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/Address_Seller_info"
                android:textSize="20dp">

            </TextView>
            <!-- the middle side end -->
            <!-- the bottom side side start -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Learn_more_Seller_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LearnMore_Seller_info"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:textColor="@color/white"
                    android:backgroundTint="?android:attr/colorPrimary"
                    android:background="@drawable/round_button"
                    >

                </Button>


                <ImageView
                    android:id="@+id/Favourite_Seller_info"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:layout_marginLeft="30dp"

                    android:contentDescription="@string/Favourite"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                  >

                </ImageView>


            </LinearLayout>
            <!-- the bottom side side end -->


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>