<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherActivities.SellerInfo"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:title="@string/SellerInfo"
        android:id="@+id/sellerInfoToolBar">
<!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

         &lt;!&ndash;   <ImageView
                android:id="@+id/bck_arrow_seller_info"
                android:layout_width="35dp"
                android:layout_height="35dp"
                 android:layout_weight="1"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
               android:src="@drawable/ic_baseline_arrow_back_24"


           >

            </ImageView>&ndash;&gt;

            <TextView
                android:id="@+id/app_name_seller_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title_Seller_Information"
                android:gravity="center"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

&lt;!&ndash;
            <ImageView
                android:id="@+id/search_icone"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toLeftOf="@id/more_icone"
                android:src="@drawable/ic_baseline_search_24">

            </ImageView>
&ndash;&gt;

            <ImageView
                android:id="@+id/more_icone_seller_info"
                android:layout_weight="1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"

                android:layout_centerVertical="true"

                android:src="@drawable/ic_baseline_more_vert_24">

            </ImageView>


        </LinearLayout>
-->

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_background"
                >
            </ImageView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_person_24"
                    >
                </ImageView>
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_names"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_create_24"
                    >

                </ImageView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_phone_24"
                    >
                </ImageView>
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_number"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>
                <!--mobile number-->
            </LinearLayout>
            <!--mobile number-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/another_uploed_details"
                android:textStyle="bold"
                android:textSize="30dp"
                >
            </TextView>
            <ListView
                android:id="@+id/list_view_seller_info"
                android:layout_width="match_parent"
                android:layout_height="635dp">

            </ListView>


        </LinearLayout>


    </ScrollView>

</LinearLayout>